--- a/AmazingFika/AmazingFika/AmazingFika.fsproj
+++ b/AmazingFika/AmazingFika/AmazingFika.fsproj
@@ -1,10 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <Configuration Condition="'$(Configuration)' == ''">Debug</Configuration>
-    <Platform Condition="'$(Platform)' == ''">AnyCPU</Platform>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{ad828896-4e77-4c28-8c93-6440f328accd}</ProjectGuid>
+    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <ProjectGuid>{AD828896-4E77-4C28-8C93-6440F328ACCD}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{F2A71F9B-5D33-465A-A702-920D77279786}</ProjectTypeGuids>
     <WebSharperProject>Site</WebSharperProject>
     <UseIISExpress>true</UseIISExpress>
@@ -17,7 +16,6 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <Tailcalls>false</Tailcalls>
     <OutputPath>bin</OutputPath>
@@ -29,6 +27,7 @@
     <Tailcalls>true</Tailcalls>
     <OutputPath>bin</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <PropertyGroup>
     <OutputType>Library</OutputType>
@@ -110,6 +109,11 @@
         </WebProjectProperties>
       </FlavorProperties>
     </VisualStudio>
+    <MonoDevelop>
+      <Properties>
+        <XspParameters Port="8080" Address="127.0.0.1" SslMode="None" SslProtocol="Default" KeyType="None" CertFile="" KeyFile="" PasswordOptions="None" Password="" Verbose="True" />
+      </Properties>
+    </MonoDevelop>
   </ProjectExtensions>
   <ItemGroup>
     <Compile Include="Remoting.fs" />
@@ -125,67 +129,71 @@
   <ItemGroup>
     <Reference Include="IntelliFactory.Xml">
       <HintPath>..\packages\WebSharper.3.4.9.188\lib\net40\IntelliFactory.Xml.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="mscorlib" />
-    <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Web" />
     <Reference Include="WebSharper.Collections">
       <HintPath>..\packages\WebSharper.3.4.9.188\lib\net40\WebSharper.Collections.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="WebSharper.Control">
       <HintPath>..\packages\WebSharper.3.4.9.188\lib\net40\WebSharper.Control.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="WebSharper.Core">
       <HintPath>..\packages\WebSharper.3.4.9.188\lib\net40\WebSharper.Core.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="WebSharper.Core.JavaScript">
       <HintPath>..\packages\WebSharper.3.4.9.188\lib\net40\WebSharper.Core.JavaScript.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="WebSharper.Html.Client">
       <HintPath>..\packages\WebSharper.3.4.9.188\lib\net40\WebSharper.Html.Client.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="WebSharper.Html.Server">
       <HintPath>..\packages\WebSharper.3.4.9.188\lib\net40\WebSharper.Html.Server.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="WebSharper.InterfaceGenerator">
       <HintPath>..\packages\WebSharper.3.4.9.188\lib\net40\WebSharper.InterfaceGenerator.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="WebSharper.JavaScript">
       <HintPath>..\packages\WebSharper.3.4.9.188\lib\net40\WebSharper.JavaScript.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="WebSharper.JQuery">
       <HintPath>..\packages\WebSharper.3.4.9.188\lib\net40\WebSharper.JQuery.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="WebSharper.Main">
       <HintPath>..\packages\WebSharper.3.4.9.188\lib\net40\WebSharper.Main.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="WebSharper.Sitelets">
       <HintPath>..\packages\WebSharper.3.4.9.188\lib\net40\WebSharper.Sitelets.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="WebSharper.Testing">
       <HintPath>..\packages\WebSharper.3.4.9.188\lib\net40\WebSharper.Testing.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="WebSharper.Web">
       <HintPath>..\packages\WebSharper.3.4.9.188\lib\net40\WebSharper.Web.dll</HintPath>
+    </Reference>
+    <Reference Include="FSharp.Core">
       <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Web.Infrastructure">
+      <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
+    </Reference>
+    <Reference Include="WebSharper.Compiler">
+      <HintPath>..\packages\WebSharper.Compiler.3.4.9.188\lib\net40\WebSharper.Compiler.dll</HintPath>
+    </Reference>
+    <Reference Include="IntelliFactory.Core">
+      <HintPath>..\packages\WebSharper.Compiler.3.4.9.188\lib\net40\IntelliFactory.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Mono.Cecil">
+      <HintPath>..\packages\WebSharper.Compiler.3.4.9.188\lib\net40\Mono.Cecil.dll</HintPath>
+    </Reference>
+    <Reference Include="Mono.Cecil.Mdb">
+      <HintPath>..\packages\WebSharper.Compiler.3.4.9.188\lib\net40\Mono.Cecil.Mdb.dll</HintPath>
+    </Reference>
+    <Reference Include="Mono.Cecil.Pdb">
+      <HintPath>..\packages\WebSharper.Compiler.3.4.9.188\lib\net40\Mono.Cecil.Pdb.dll</HintPath>
     </Reference>
   </ItemGroup>
 </Project>
