--- a/AmazingFika/AmazingFika/Web.config
+++ b/AmazingFika/AmazingFika/Web.config
@@ -11,7 +11,12 @@
   </runtime>
   <system.web>
     <!-- NOTE: remove debug="true" to serve compressed JavaScript -->
-    <compilation debug="true" targetFramework="4.0" />
+    <compilation debug="true" targetFramework="4.0">
+      <assemblies>
+        <add assembly="FSharp.Core, Version=4.3.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+        <add assembly="System.Numerics, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+      </assemblies>
+    </compilation>
     <!-- This is only needed for VS Development WebServer. IIS/IIS Express do not use this:-->
     <httpModules>
       <add name="WebSharper.RemotingModule" type="WebSharper.Web.RpcModule, WebSharper.Web" />
