--- a/AmazingFika/AmazingFika/packages.config
+++ b/AmazingFika/AmazingFika/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="WebSharper" version="3.4.9.188" targetFramework="net40" />
+  <package id="WebSharper.Compiler" version="3.4.9.188" targetFramework="net40" />
 </packages>
